<resources>
    <string name="app_name">Мои карты</string>
    <string name="tv_list_card_name">Название карты</string>
    <string name="df_long_name">Выберите действие</string>
    <string name="df_delete_name">Удалить карту?</string>
    <string name="df_delete_button_positive">Удалить</string>
    <string name="df_delete_button_hegative">Отмена</string>
    <string name="menu_sort">Сортировка</string>
    <string name="detailed_save">Сохранить</string>
    <string name="detailed_name">Название карты</string>
    <string name="detailed_edit_name">Введите название</string>
    <string name="detailed_number">Номер карты</string>
    <string name="detailed_btn_scsn_text">Считать код</string>
    <string name="detailed_text_foto1">Фото лицевой стороны</string>
    <string name="detailed_text_foto2">Фото обратной стороны</string>
    <string name="detailed_create_foto1">Сделать фото лицевой стороны</string>
    <string name="detailed_create_foto2">Сделать фото обратной стороны</string>
    <string name="detailed_comment">Примечание</string>
    <string name="barcode_fragment">Наведите камеру на штрих код. Распознается автоматически</string>
    <string name="error_detector_barcode">Ошибка. Сканер не доступен.</string>
    <string name="barcode_fragment_focus">Дождитесь автоматической фокусировки</string>
    <string name="buttonpreview">Детальная информация</string>
    <string name="permission_camera">Камера</string>
    <string name="permission_need">Требуется добавить разрешение</string>
    <string name="toast_error_camera">Нет разрешения для работы с камерой</string>
    <string name="textview_pr" />
</resources>
