<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/detailed_textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/detailed_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/detailed_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailed_textView_name" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/detailed_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailed_btn_scancode" />

            <EditText
                android:id="@+id/detailed_edit_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="numberSigned"
                android:numeric="integer|signed"
                android:password="false"
                android:phoneNumber="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/detailed_btn_scancode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detailed_btn_scsn_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailed_edit_number" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/detailed_text_foto1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailed_edit_name" />

            <ImageView
                android:id="@+id/imageView_foto1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/btn_create_foto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_create_foto1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_text_foto2" />

            <ImageView
                android:id="@+id/imageView_foto2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/btn_create_foto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_create_foto2" />

            <TextView
                android:id="@+id/textView_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_comment" />

            <EditText
                android:id="@+id/detailed_edit_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/save_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailed_save" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>